fixed pictures' background and added overflow hidden property

--- a/mobileView.css
+++ b/mobileView.css
@@ -1,28 +1,29 @@
 @media only screen and (max-width: 768px) {
-	.meet-heading {
-		font-size: 45px;
-	}
+  .meet-heading {
+    font-size: 45px;
+  }
 
-	.one-line-card {
-		flex-direction: column;
-	}
+  .one-line-card {
+    flex-direction: column;
+  }
 
-	.main-card {
-		width: 96%;
-		max-width: 400px;
-		margin: 10px auto;
-		flex-direction: column;
-	}
+  .main-card {
+    width: 96%;
+    max-width: 400px;
+    margin: 10px auto;
+    flex-direction: column;
+  }
 
-	.card-height {
-		height: fit-content;
-	}
+  .card-height {
+    height: fit-content;
+  }
 
-	.main-img {
-		padding: 0;
-	}
+  .main-img {
+    padding: 0;
+    margin-top: 1rem;
+  }
 
-	.footer {
-		flex-direction: column;
-	}
+  .footer {
+    flex-direction: column;
+  }
 }
